--- a/Heart_Disease_Prediction_Using_ML_COLAB.ipynb
+++ b/Heart_Disease_Prediction_Using_ML_COLAB.ipynb
@@ -134,6 +134,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "`auth.authenticate_user()` is a function that authenticates the user with Google in order to access Google services like Google Drive. It initiates the authentication process by prompting the user to authorize access to their Google account.\n",
+        "\n",
+        "\n",
+        "The line `gauth.credentials = GoogleCredentials.get_application_default()` is setting the credentials for authentication to be the default application credentials. This means that the PyDrive client will use the default credentials associated with the application environment in which it is running to authenticate and access Google Drive. This is a convenient way to authenticate without needing to explicitly provide credentials, as it leverages the default credentials available in the environment.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -744,7 +754,6 @@
         "    Returns a correlation matrix where each cell shows the correlation coefficient between two variables\n",
         "\n",
         "This is useful for:\n",
-        "\n",
         "    Feature selection\n",
         "    Understanding which variables are most strongly related to heart disease\n",
         "    Identifying potential redundant features\n",
@@ -786,6 +795,27 @@
         "plt.figure(figsize=(15,10))\n",
         "\n",
         "g=sns.heatmap(df[top_corr_features].corr(),annot=True,cmap=\"RdYlGn\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This code removes highly correlated features from the dataset. \n",
+        "\n",
+        "`\n",
+        "correlation_matrix = df.corr()\n",
+        "`\n",
+        "Calculates correlations between all numerical columns\n",
+        "Returns a matrix where each cell shows correlation between two features\n",
+        "Values range from -1 to 1\n",
+        "\n",
+        "`\n",
+        "columns = np.full((correlation_matrix.shape[0],), True, dtype=bool)\n",
+        "`\n",
+        "Creates array of True values\n",
+        "Length equals number of features\n",
+        "Will use to track which columns to keep\n"
       ]
     },
     {
@@ -950,10 +980,15 @@
         "columns = np.full((correlation_matrix.shape[0],), True, dtype=bool)\n",
         "for i in range(correlation_matrix.shape[0]):\n",
         "    for j in range(i+1, correlation_matrix.shape[0]):\n",
-        "        if correlation_matrix.iloc[i,j] >= 0.9:\n",
+        "        if correlation_matrix.iloc[i,j] >= 0.9:  # Correlation threshold\n",
         "            if columns[j]:\n",
         "                columns[j] = False\n",
-        "columns[-1]=True\n",
+        "                \"\"\"Iterates through correlation matrix\n",
+        "    Checks pairs of features\n",
+        "    If correlation ≥ 0.9, marks one for removal\n",
+        "    Only checks upper triangle of matrix (since it's symmetric)\"\"\"\n",
+        "                \n",
+        "columns[-1]=True #Ensures target column is kept, Prevents accidental removal of dependent variable\n",
         "selected_columns = df.columns[columns]\n",
         "df = df[selected_columns]\n",
         "df.head()"
@@ -1736,20 +1771,24 @@
         }
       ],
       "source": [
-        "plt.figure(figsize=(15,10))\n",
-        "knn_value=[]\n",
-        "knn_score=[]\n",
+        "plt.figure(figsize=(15,10)) # Set figure size\n",
+        "knn_value=[] # Store K values\n",
+        "knn_score=[] # Store accuracy scores\n",
+        "# Range from 3 to sqrt(training_set_size), step by 2\n",
         "for i in range(3,int(math.sqrt(len(X_train))),2):\n",
-        "    a=print_prediction(i,False)\n",
-        "    knn_score.append(a)\n",
-        "    knn_value.append(i)\n",
+        "    a=print_prediction(i,False)     # Get accuracy for this K\n",
+        "    knn_score.append(a)            # Store accuracy\n",
+        "    knn_value.append(i)            # Store K value\n",
         "\n",
+        "# Create line plot\n",
         "plt.plot([k for k in range(3,int(math.sqrt(len(X_train))),2)],knn_score,color='green')\n",
+        "# Add value labels to points\n",
         "j=0\n",
         "for i in range(3,int(math.sqrt(len(X_train))),2):\n",
         "    plt.text(i,knn_score[j],(i,knn_score[j]))\n",
         "    j+=1\n",
         "\n",
+        "# Find and print best K value\n",
         "print(\"K value :- \",end=\" \")\n",
         "print(knn_value[knn_score.index(max(knn_score))])\n",
         "print(\"Accuracy :- \",end=\" \")\n",
