import code update

--- a/Heart_Disease_Prediction_Using_ML_COLAB.ipynb
+++ b/Heart_Disease_Prediction_Using_ML_COLAB.ipynb
@@ -41,7 +41,7 @@
         "import seaborn as sns\n",
         "from matplotlib import rcParams #rcParams is a dictionary-like object that contains the default settings for Matplotlib plots\n",
         "from matplotlib.cm import rainbow #Imports the rainbow colormap from Matplotlib's colormap module, Useful for plots where you need to distinguish multiple categories or values\n",
-        "%matplotlib inline\n",
+        "%matplotlib inline #Used to display plots inline in Jupyter Notebook or other interactive environments\n",
         "import warnings #Used for warning message handling and control\n",
         "warnings.filterwarnings('ignore') #Prevents warning messages from being displayed in the output"
       ]
